# koopmans-kcp

./: .gitignore  CMakeLists.txt  Makefile  README.rst  notes.md
.github/workflows/: make.yml
AFC90/: CMakeLists.txt
AFC90/src/: gaussiank.f90
CPV/: CMakeLists.txt  Makefile  cg_empty_sub.f90  cg_sub.f90  cglib.f90  chargedensity.f90  cp_interfaces.f90  cp_restart.f90  cplib.f90  cpr.f90  dforceb.f90  eelib.f90  efield.f90  eigs0.f90  electrons.f90  empty_koopmans_pp.f90  empty_koopmans_pp.f90_bk  emptystates.f90  emptystates_tocg.f90  environment.f90  exch_corr.f90  forces.f90  fromscra.f90  geninv.f90  inner_loop.f90  inner_loop_generalize.f90  input.f90  io_pot_sic_xml.f90  main.f90  make.depend  modules.f90  move_electrons.f90  nksic_corrections.f90  nksiclib.f90  nksiclib.f90_bk  nl_base.f90  nlcc.f90  odd_alpha.f90  ortho.f90  ortho_base.f90  (+7 more)
Modules/: CMakeLists.txt  Makefile  control_flags.f90  input_parameters.f90  make.depend  pseudo_types.f90  read_namelists.f90  version.f90  zhpev_drv.f90
PP/: Makefile  bin2xml.f90  bin2xml_real_space_density.f90  epsilon.f90  make.depend  n2npm1.f90
clib/: CMakeLists.txt
cmake/: kcpConfig.cmake.in  kcpHelpers.cmake
flib/: CMakeLists.txt  Makefile  lapack_all.f
install/: configure
iotk/: CMakeLists.txt
tests/: .gitignore  ENVIRONMENT  Makefile  extract-bin2xml.sh  extract-kcp.sh  jobconfig  run-bin2xml.sh  run-kcp.sh  userconfig  userconfig.tmp
tests/bin2xml/: bands_to_solve.txt
tests/kcp_ozone/: benchmark.out.0.1.inp=ozone.dft.in  benchmark.out.0.1.inp=ozone.ki.in  benchmark.out.0.1.inp=ozone.pz.in  ozone.dft.in  ozone.ki.in  ozone.pz.in
